--- a/ui/index.html
+++ b/ui/index.html
@@ -1,36 +1,30 @@
 <!doctype html>
-<html amp lang="ko">
-  <head>
-    <meta charset="utf-8">
-    <title>Hello, This is Sangmi's Work</title>
-    <!--#include virtual="/inc/amp-top.inc" -->
-    <!--#include virtual="/inc/amp-css.inc" -->
-  </head>
-  <body>
-  <header class="header">
-    <button type="button" title="이전 화면으로 돌아가기"><i class="icon icon-back"></i></button>
-    <h1>서울시 강남구 신사동</h1>
-    <div class="shareWrap">
-        <button type="button" title="SNS 공유하기"><i class="icon icon-share"></i></button>
-        <button type="button" title="즐겨찾기"><i class="icon icon-favorite"></i></button>
+<html lang="ko">
+<!--#include virtual="/inc/head.inc" -->
+<body>
+<header class="header">
+    <button type="button" title="이전 화면으로 돌아가기" class="btn btn-back"><i class="icon icon-back"></i></button>
+    <h1 class="h1">서울시 강남구 신사동</h1>
+    <div class="optionWrap">
+        <button type="button" title="SNS 공유하기" class="btn btn-share"><i class="icon icon-share"></i></button>
+        <button type="button" title="즐겨찾기" class="btn btn-favorite"><i class="icon icon-favorite"></i></button>
     </div>
-  </header>
-  <main class="main">
-    <article class="banner top">
-        <!--#include virtual="/inc/article-carousel.inc" -->
-    </article>
+</header>
+<main class="main">
+<!--#include virtual="/inc/article-carousel.inc" -->
     <header>
-        <h1><span class="label-safe">안심중개사<i>™</i></span>가 등록한 방입니다.</h1>
+        <h1 class="h1"><span class="label-safe">안심중개사<i>™</i></span> 가 등록한 방입니다.</h1>
     </header>
-    <article class="article">
+    <article class="article info-price">
         <header>
-            <h2>신사동 예쁜 쓰리룸</h2>
+            <h2 class="h2 bold">신사동 예쁜 쓰리룸</h2>
         </header>
+        <div class="box-white">
         <dl class="dl-table price">
             <dt>보증금</dt>
-            <dd><em>10000</em>만원</dd>
+            <dd><em>10000</em> 만원</dd>
             <dt>월세</dt>
-            <dd><em>100</em>만원</dd>
+            <dd><em>100</em> 만원</dd>
             <dt>등록번호</dt>
             <dd>1234567</dd>
             <dd class="float">
@@ -65,81 +59,71 @@
             <dt>입주가능일</dt>
             <dd>4월21일 이후</dd>
         </dl>
+        </div>
     </article>
-    <article class="article">
+    <article class="article info-description">
         <header>
-            <h2>상세설명</h2>
+            <h2 class="h2">상세설명</h2>
         </header>
         <div class="box box-white">
             <p>거실과 방이 크게 나온 신사동 3룸 입니다 ^^
-            <br>남향집이고 해가 너무 잘들고 근처 건물둘에 비해서 집이 깨끗하고 뷰도 좋은 편입니다.
-            <br>가격은 집주인 분과 상의 후에 조정 가능합니다!!
-            <br>깔끔하고 좋은 집 보러 연락주세요!!
+                <br>남향집이고 해가 너무 잘들고 근처 건물둘에 비해서 집이 깨끗하고 뷰도 좋은 편입니다.
+                <br>가격은 집주인 분과 상의 후에 조정 가능합니다!!
+                <br>깔끔하고 좋은 집 보러 연락주세요!!
             </p>
         </div>
     </article>
     <article class="article">
         <header>
-            <h2>담당자 한마디</h2>
+            <h2 class="h2">담당자 한마디</h2>
         </header>
         <div class="box box-white">
             <p>공휴일 및 주말에도 언제든지 상담 가능
-            <br>차량 픽업 서비스 가능
-            <br>조건에 맞는 집 답사
-            <br>상담부터 계약까지 고객 맞춤형 서비스
+                <br>차량 픽업 서비스 가능
+                <br>조건에 맞는 집 답사
+                <br>상담부터 계약까지 고객 맞춤형 서비스
             </p>
         </div>
     </article>
-    <article class="article">
+    <!--#include virtual="/inc/article-form.inc" -->
+    <!--#include virtual="/inc/article-map.inc" -->
+    <article class="article info-agent">
         <header>
-            <h2>건물정보</h2>
+            <h2 class="h2">중개사정보</h2>
         </header>
         <div class="box box-white">
-            
-        </div>
-    </article>
-    <article class="article">
-        <header>
-            <h2>위치보기</h2>
-        </header>
-        <div class="mapWrap">
-        <!--#include virtual="/inc/map.inc" -->
-        </div>
-    </article>
-    <article class="article">
-        <header>
-            <h2>중개사정보</h2>
-        </header>
-        <section>
-            <div class="box box-white">
-                <div class="top">
-                    <figure>
-                        <amp-img src="/common/img/pic.jpg" width="200" height="150" alt="profile"></amp-img>
-                        <figcaption><span class="label-safe">안심중개사<i>™</i></span></figcaption>
-                    </figure>
-                </div>
-                <div class="bottom">
-                    <h3>중개사무소 정보</h3>
-                    <ul>
-                        <li>서울시 마포구, 테리 부동산 (김테리)</li>
-                        <li>대표번호 : 1588-1688</li>
-                    </ul>
-                </div>
+            <div class="top">
+                <figure>
+                    <img src="img/pic.jpg" alt="a profile picture">
+                    <figcaption><span class="label-safe">안심중개사<i>™</i></span></figcaption>
+                </figure>
+                <ul>
+                    <li>대표공인중개사 (이갑영)</li>
+                    <li>okok@naver.com</li>
+                    <li>010-1234-4567</li>
+                </ul>
             </div>
-        </section>
+            <div class="bottom">
+                <h3>중개사무소 정보</h3>
+                <ul>
+                    <li>서울시 마포구, 테리 부동산 (김테리)</li>
+                    <li>대표번호 : 1588-1688</li>
+                </ul>
+            </div>
+        </div>
     </article>
-  </main>
-  <footer class="footer">
-        <div class="box box-gray">
-            <p>이 방은 <strong>공인중개사가 등록한 중개 매물</strong>입니다.
+</main>
+<footer class="footer">
+    <div class="box box-gray">
+        <p>이 방은 <strong>공인중개사가 등록한 중개 매물</strong>입니다.
             <br>공인중개사를 통해 <strong>안전하게 계약</strong>할 수 있으며, <strong>법정 중개 보수가 발생</strong>합니다.</p>
-        </div>
-        <div class="box box-call">
-            <p class="txt-s">우정공인중개사(김성훈)</p>
-            <p class="txt-l">중개보조원(한유진팀장)</p>
-            <p class="txt"><strong class="tel">010-5228-7825</strong> <span class="label">중개</span></p>
-            <a href="tel:01052287825" class="btn-call"><i class="icon icon-call"></i> 문의하기</a>
-        </div>
-  </footer>
-  </body>
+    </div>
+    <a href="tel:01052287825" class="box-call">
+        <p class="txt-s">우정공인중개사(김성훈)</p>
+        <p class="txt-l">중개보조원(한유진팀장)</p>
+        <p class="txt"><em class="tel">010-5228-7825</em> <span class="label">중개</span></p>
+        <span class="btn-call"><i class="icon icon-call"></i> 문의하기</span>
+    </a>
+</footer>
+</body>
 </html>
