--- a/src/inc/head.html
+++ b/src/inc/head.html
@@ -7,5 +7,5 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/common/css/style.css">
-    <script type="text/javascript" src="/common/js/app.js"></script>
+    <script src="/common/js/app.js"></script>
 </head>
