--- a/src/inc/article-form.amp.html
+++ b/src/inc/article-form.amp.html
@@ -2,7 +2,7 @@
         <header>
             <h2 class="h2">건물정보</h2>
         </header>
-        <amp-state id="infoBuilding" src="/common/data/items.json">
+        <amp-state id="infoBuilding" src="/data/items.json">
         </amp-state>
         <div class="box box-white">
             <figure>
