--- a/src/inc/article-form.html
+++ b/src/inc/article-form.html
@@ -6,7 +6,7 @@
         </div>
     </article>
     <script>
-        var getInfo = ampJS.getData('/common/data/items.json', function (d) {
+        var getInfo = ampJS.getData('/data/items.json', function (d) {
             var array = d.datas;
             var datas = array.map(function(array) {
                 var obj = {};
