--- a/src/inc/head.html
+++ b/src/inc/head.html
@@ -6,6 +6,6 @@
     <meta name="keyword" content="">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/common/css/style.css">
-    <script src="/common/js/app.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/app.js"></script>
 </head>
