--- a/src/inc/article-carousel.amp.html
+++ b/src/inc/article-carousel.amp.html
@@ -1,28 +1,45 @@
 <article class="carousel-wrap" id="carouselWrap">
     <amp-carousel id="carousel-with-preview"
+                  on="tap:lightbox1"
+                  role="button"
+                  tabindex="0"
                   width="720"
                   height="720"
                   layout="responsive"
                   type="slides">
         <amp-img src="img/carousel1.jpg"
+                 on="tap:lightbox1"
+                 role="button"
+                 tabindex="0"
                  width="720"
                  height="720"
                  layout="responsive"
                  alt="apples"></amp-img>
         <amp-img src="img/carousel2.jpg"
+                 on="tap:lightbox1"
+                 role="button"
+                 tabindex="0"
                  width="720"
                  height="720"
                  layout="responsive"
                  alt="lemons"></amp-img>
         <amp-img src="img/carousel3.jpg"
+                 on="tap:lightbox1"
+                 role="button"
+                 tabindex="0"
                  width="720"
                  height="720"
                  layout="responsive"
                  alt="blueberries"></amp-img>
         <amp-img src="img/carousel4.jpg"
+                 on="tap:lightbox1"
+                 role="button"
+                 tabindex="0"
                  width="720"
                  height="720"
                  layout="responsive"
                  alt="blueberries"></amp-img>
     </amp-carousel>
+    <amp-image-lightbox id="lightbox1"
+                        layout="nodisplay"></amp-image-lightbox>
 </article>
