--- a/src/inc/article-carousel.html
+++ b/src/inc/article-carousel.html
@@ -16,8 +16,9 @@
             <img src="img/carousel4.jpg" alt="" draggable="false">
         </div>
     </div>
+    <div class="overlayWrap"><div class="overlay"></div></div>
 </article>
 
 <script>
-    ampJS.sliderJS.init('#carouselWrap');
+    ampJS.sliderJS.init('#carouselWrap', {modal: true});
 </script>
